profilelist1exp/unpackaged/objects/Partner_Type_Field_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tab_Name__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active Buying Relationship Agreement</fullName>
                </value>
                <value>
                    <fullName>Address 1</fullName>
                </value>
                <value>
                    <fullName>Address 2</fullName>
                </value>
                <value>
                    <fullName>Address 3</fullName>
                </value>
                <value>
                    <fullName>Agree Both Dell ResellerTechPart</fullName>
                </value>
                <value>
                    <fullName>Agree Dell Partner Dist Pro</fullName>
                </value>
                <value>
                    <fullName>Agree Dell Partner Dist Sup</fullName>
                </value>
                <value>
                    <fullName>Agree Dell Reseller</fullName>
                </value>
                <value>
                    <fullName>Agree Technology Partner Program</fullName>
                </value>
                <value>
                    <fullName>AGREE to Dell MFT Partner Program</fullName>
                </value>
                <value>
                    <fullName>Annual Revenue</fullName>
                </value>
                <value>
                    <fullName>Application Environments</fullName>
                </value>
                <value>
                    <fullName>Area of Interest</fullName>
                </value>
                <value>
                    <fullName>Area of Interest Non GC</fullName>
                </value>
                <value>
                    <fullName>Asset recovery/resale/recycling</fullName>
                </value>
                <value>
                    <fullName>Bylaws</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Cloud Services Revenue</fullName>
                </value>
                <value>
                    <fullName>Comments</fullName>
                </value>
                <value>
                    <fullName>Company Physical Address Message</fullName>
                </value>
                <value>
                    <fullName>Company Website / URL</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Consulting Market</fullName>
                </value>
                <value>
                    <fullName>Contact Physical Address Message</fullName>
                </value>
                <value>
                    <fullName>CSP/MSP Organization require EMC Storage</fullName>
                </value>
                <value>
                    <fullName>Currently Selling Dell</fullName>
                </value>
                <value>
                    <fullName>Currently under investigation?</fullName>
                </value>
                <value>
                    <fullName>Custom Configuration/Imaging</fullName>
                </value>
                <value>
                    <fullName>Custom enterprise/data center services</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this checkbox to enable the field to the corresponding tab and uncheck to disable the field on the corresponding tab.</inlineHelpText>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this checkbox to make the field mandatory in corresponding tab and uncheck to make in non mandatory field on the corresponding tab</inlineHelpText>
        <label>Is Required (Mandatory)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <inlineHelpText>Enter the partner type name</inlineHelpText>
        <label>Partner Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Partner_Type__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Partner_Type__c</referenceTo>
        <relationshipLabel>Partner Type Field Configurations</relationshipLabel>
        <relationshipName>Partner_Type_Field_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tab_Name__c</fullName>
        <label>Tab Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Focus</fullName>
                </value>
                <value>
                    <fullName>Segment</fullName>
                </value>
                <value>
                    <fullName>Partner Selection</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Type Field Configuration</label>
    <nameField>
        <label>Partner Type Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Type Field Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>